# tmcp-python

./: .gitmodules  README.md  pyproject.toml
demo/: .gitignore  README.md
demo/client/: client.py  pyproject.toml
demo/server/: pyproject.toml  server.py
demo/server-github-demo/: .gitignore  pyproject.toml  server.py
src/tmcp/: __init__.py  tmcp.py
