[project]
name = "tmcp"
version = "0.1.0"
description = "MCP over TSP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tsp-python", "mcp"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
packages = ["src/tmcp"]

[tool.pyright]
include = ["src/tmcp", "demo/*"]
venvPath = "../"
venv = ".venv"
strict = ["src/tmcp/**/*.py"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["README.md"]

[tool.uv.workspace]
members = ["demo/*"]

[tool.uv.sources]
tmcp = { workspace = true }
tsp-python = { git = "https://github.com/openwallet-foundation-labs/tsp", subdirectory = "tsp_python", rev = "7286631506e52dda9603c757448c9e4380ce5c62" }
mcp = { git = "https://github.com/openwallet-foundation-labs/mcp-transport-hooks" }
